--- a/uzduotis_54_1/index.html
+++ b/uzduotis_54_1/index.html
@@ -3,131 +3,131 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <div class = "poem">
-        <table>
-            <tr>
-                <th style="background-color: gold", colspan="3"><h1>Tis the seasons</h1></th>
-            </tr>
+<div class="poem">
+    <table>
+        <tr>
+            <th , colspan="3" style="background-color: gold"><h1>Tis the seasons</h1></th>
+        </tr>
 
-            <tr>
-                <td>
-                    <div class="spring">
-                        Festive Spring has arrived,
-                        The birds salute it with their happy song.
-                        And the brooks, caressed by little Zephyrs,
-                        Flow with a sweet murmur.
-                        The sky is covered with a black mantle,
-                        And thunder, and lightning, announce a storm.
-                        When they are silent, the birds
-                        Return to sing their lovely song.
-                        II. Largo e pianissimo sempre--
-                        And in the meadow, rich with flowers,
-                        To the sweet murmur of leaves and plants,
-                        The goatherd sleeps, with his faithful dog at his side.
-                        III. Danza pastorale. Allegro--
-                        To the festive sound of pastoral bagpipes,
-                        Dance nymphs and shepherds,
-                        At Spring's brilliant appearance.>
-                    </div>
-                </td>
+        <tr>
+            <td>
+                <div class="spring">
+                    Festive Spring has arrived,
+                    The birds salute it with their happy song.
+                    And the brooks, caressed by little Zephyrs,
+                    Flow with a sweet murmur.
+                    The sky is covered with a black mantle,
+                    And thunder, and lightning, announce a storm.
+                    When they are silent, the birds
+                    Return to sing their lovely song.
+                    II. Largo e pianissimo sempre--
+                    And in the meadow, rich with flowers,
+                    To the sweet murmur of leaves and plants,
+                    The goatherd sleeps, with his faithful dog at his side.
+                    III. Danza pastorale. Allegro--
+                    To the festive sound of pastoral bagpipes,
+                    Dance nymphs and shepherds,
+                    At Spring's brilliant appearance.>
+                </div>
+            </td>
 
-                <td style="background: linear-gradient(220deg, rgba(34,139,34,.25) 40%, rgba(255,215,0,0.3) 80%)">
-                    <img src="pics/spring.png">
+            <td style="background: linear-gradient(220deg, rgba(34,139,34,.25) 40%, rgba(255,215,0,0.3) 80%)">
+                <img src="pics/spring.png">
 
-                </td>
+            </td>
 
-                <td>
-                    <div class = "summer">
-                        Under the heat of the burning summer sun,
-                        Languish man and flock; the pine is parched.
-                        The cuckoo finds its voice, and suddenly,
-                        The turtledove and goldfinch sing.
-                        A gentle breeze blows,
-                        But suddenly, the north wind appears.
-                        The shepherd weeps because, overhead,
-                        Lies the fierce storm, and his destiny.
-                        II. Adagio; Presto--
-                        His tired limbs are deprived of rest
-                        By his fear of lightning and fierce thunder,
-                        And by furious swarms of flies and hornets.
-                        III. Presto--
-                        Alas, how just are his fears,
-                        Thunder and lightening fill the Heavens, and the hail
-                        Slices the tops of the corn and other grain.
-                    </div>
-                </td>
-            </tr>
+            <td>
+                <div class="summer">
+                    Under the heat of the burning summer sun,
+                    Languish man and flock; the pine is parched.
+                    The cuckoo finds its voice, and suddenly,
+                    The turtledove and goldfinch sing.
+                    A gentle breeze blows,
+                    But suddenly, the north wind appears.
+                    The shepherd weeps because, overhead,
+                    Lies the fierce storm, and his destiny.
+                    II. Adagio; Presto--
+                    His tired limbs are deprived of rest
+                    By his fear of lightning and fierce thunder,
+                    And by furious swarms of flies and hornets.
+                    III. Presto--
+                    Alas, how just are his fears,
+                    Thunder and lightening fill the Heavens, and the hail
+                    Slices the tops of the corn and other grain.
+                </div>
+            </td>
+        </tr>
 
-            <tr>
-                <td style="background: linear-gradient(90deg, rgba(240,248,255,100) 40%, rgba(255,215,0,0.3) 80%)">
-                    <img src="pics/winter.png", width="600", height="600">
-                </td>
+        <tr>
+            <td style="background: linear-gradient(90deg, rgba(240,248,255,100) 40%, rgba(255,215,0,0.3) 80%)">
+                <img , , height="600" src="pics/winter.png" width="600">
+            </td>
 
-                <td style="background-color: rgba(255,215,0,0.3)">
-                    <img src="pics/seasons.png", width="600", height="600">
-                </td>
+            <td style="background-color: rgba(255,215,0,0.3)">
+                <img , , height="600" src="pics/seasons.png" width="600">
+            </td>
 
-                <td style="background: linear-gradient(260deg, LightYellow 40%, rgba(255,215,0,0.3) 80%)">
-                    <img src="pics/summer.png", width="600", height="600">
-                </td>
-            </tr>
+            <td style="background: linear-gradient(260deg, LightYellow 40%, rgba(255,215,0,0.3) 80%)">
+                <img , , height="600" src="pics/summer.png" width="600">
+            </td>
+        </tr>
 
-            <tr>
-                <td>
-                    <div class="winter">
-                        Frozen and trembling in the icy snow,
-                        In the severe blast of the horrible wind,
-                        As we run, we constantly stamp our feet,
-                        And our teeth chatter in the cold.
-                        II. Largo--
-                        To spend happy and quiet days near the fire,
-                        While, outside, the rain soaks hundreds.
-                        III. Allegro--
-                        We walk on the ice with slow steps,
-                        And tread carefully, for fear of falling.
-                        Symphony, If we go quickly, we slip and fall to the ground.
-                        Again we run on the ice,
-                        Until it cracks and opens.
-                        We hear, from closed doors,
-                        Sirocco, Boreas, and all the winds in battle.
-                        This is winter, but it brings joy.
-                    </div>
-                </td>
+        <tr>
+            <td>
+                <div class="winter">
+                    Frozen and trembling in the icy snow,
+                    In the severe blast of the horrible wind,
+                    As we run, we constantly stamp our feet,
+                    And our teeth chatter in the cold.
+                    II. Largo--
+                    To spend happy and quiet days near the fire,
+                    While, outside, the rain soaks hundreds.
+                    III. Allegro--
+                    We walk on the ice with slow steps,
+                    And tread carefully, for fear of falling.
+                    Symphony, If we go quickly, we slip and fall to the ground.
+                    Again we run on the ice,
+                    Until it cracks and opens.
+                    We hear, from closed doors,
+                    Sirocco, Boreas, and all the winds in battle.
+                    This is winter, but it brings joy.
+                </div>
+            </td>
 
-                <td style="background: linear-gradient(360deg, linen 40%, rgba(255,215,0,0.3) 80%)">
-                    <img src="pics/autumn.png", width="600", height="600">
-                </td>
+            <td style="background: linear-gradient(360deg, linen 40%, rgba(255,215,0,0.3) 80%)">
+                <img , , height="600" src="pics/autumn.png" width="600">
+            </td>
 
-                <td>
-                    <div class="autumn">
-                        The peasants celebrate with dance and song,
-                        The joy of a rich harvest.
-                        And, full of Bacchus's liquor,
-                        They finish their celebration with sleep.
-                        II. Adagio molto--
-                        Each peasant ceases his dance and song.
-                        The mild air gives pleasure,
-                        And the season invites many
-                        To enjoy a sweet slumber.
-                        III. Allegro--
-                        The hunters, at the break of dawn, go to the hunt.
-                        With horns, guns, and dogs they are off,
-                        The beast flees, and they follow its trail.
-                        Already fearful and exhausted by the great noise,
-                        Of guns and dogs, and wounded,
-                        The exhausted beast tries to flee, but dies.
-                    </div>
-                </td>
-            </tr>
-        </table>
-    </div>
+            <td>
+                <div class="autumn">
+                    The peasants celebrate with dance and song,
+                    The joy of a rich harvest.
+                    And, full of Bacchus's liquor,
+                    They finish their celebration with sleep.
+                    II. Adagio molto--
+                    Each peasant ceases his dance and song.
+                    The mild air gives pleasure,
+                    And the season invites many
+                    To enjoy a sweet slumber.
+                    III. Allegro--
+                    The hunters, at the break of dawn, go to the hunt.
+                    With horns, guns, and dogs they are off,
+                    The beast flees, and they follow its trail.
+                    Already fearful and exhausted by the great noise,
+                    Of guns and dogs, and wounded,
+                    The exhausted beast tries to flee, but dies.
+                </div>
+            </td>
+        </tr>
+    </table>
+</div>
 
 
-    <br/><br/><br/><br/>
+<br/><br/><br/><br/>
 
-    <a href="https://www.charlottesymphony.org/blog/vivaldis-four-seasons-poems/">Poem taken from here</a>
+<a href="https://www.charlottesymphony.org/blog/vivaldis-four-seasons-poems/">Poem taken from here</a>
 </body>
 </html>
