--- a/uzduotis_58_animacijos/index_anim.html
+++ b/uzduotis_58_animacijos/index_anim.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Poem, but flexed</title>
-    <link href="styles.css" rel="stylesheet">
+    <link href="styles2.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -27,8 +27,10 @@
         </div>
 
         <div style="background: linear-gradient(220deg, rgba(34,139,34,.25) 40%, rgba(255,215,0,0.3) 80%)">
-            <img src="pics/spring.png">
-
+            <img style="position:absolute;" src="pics/spring.png">
+            <div class="birb">
+                <img src="pics/birb.png" width="50" height="50">
+            </div>
         </div>
 
         <div class="summer">
@@ -51,8 +53,10 @@
         </div>
 
         <div style="background: linear-gradient(90deg, rgba(240,248,255,100) 40%, rgba(255,215,0,0.3) 80%)">
-            <img src="pics/winter.png">
-
+            <img style=" position:absolute;" src="pics/winter.png">
+            <div class="snowing">
+                <img src="pics/snowflakes.png">
+            </div>
         </div>
 
         <div style="background-color: rgba(255,215,0,0.3)">
@@ -60,7 +64,10 @@
         </div>
 
         <div style="background: linear-gradient(260deg, LightYellow 40%, rgba(255,215,0,0.3) 80%)">
-            <img src="pics/summer.png">
+            <img style=" position:absolute;" src="pics/summer.png" >
+            <div class="sun-out">
+                <img src="pics/sun.png" height="50px" width="10px">
+            </div>
         </div>
 
         <div class="winter">
@@ -82,9 +89,11 @@
             This is winter, but it brings joy.
         </div>
 
-        <div style="background: linear-gradient(360deg, linen 40%, rgba(255,215,0,0.3) 80%)">
-            <img src="pics/autumn.png">
-
+        <div style="background: linear-gradient(360deg, linen 40%, rgba(255,215,0,0.3) 80%);">
+            <img style=" position:absolute;" src="pics/autumn.png" >
+            <div class="leaves">
+                <img src="pics/leaves.png">
+            </div>
         </div>
 
         <div class="autumn">
